--- a/styles.css
+++ b/styles.css
@@ -233,12 +233,13 @@ main {
     padding-left: 80px;
     padding-top: 50px;
   }
-  
+
   .crossMark {
     width: 350px;
   }
-  
+
   .check {
     padding-left: 60px;
-    width: 400
+    width: 400;
+  }
 }
