--- a/footer.css
+++ b/footer.css
@@ -1,18 +1,18 @@
 footer {
-  flex: none;
-  height: 60px;
-  background-color: black;
-  display: none;
+  height: 0px;
+  position: relative;
 }
 
 .scoreTracker {
-  margin-top: 5px;
   text-align: center;
   color: yellow;
-  /* border: 2px solid red; */
+  position: absolute;
+  bottom: 30px;
+  right: 5%;
 }
-@media only screen and (min-width: 390px) {
 
+@media only screen and (min-width: 390px) {
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
