--- a/styles.css
+++ b/styles.css
@@ -124,20 +124,6 @@ main {
   padding-left: 30px;
   width: 100px;
 }
-/* 
-@media only screen and (min-width: 768px) {
-  header {
-    height: 60px;
-  }
-
-  main {
-    flex-direction: row;
-  }
-
-  .movie {
-    width: 20rem;
-  }
-} */
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 390px) {
@@ -161,7 +147,7 @@ main {
   }
 
   .movie {
-    width: 20rem;
+    width: 23rem;
   }
 
   footer {
@@ -181,6 +167,22 @@ main {
   .nextButton {
     font-size: 1.4rem;
   }
+
+  .circle,
+  .cross {
+    width: 300px;
+    height: 240px;
+  }
+
+  .crossMark {
+    width: 200px;
+    margin: 0 auto;
+  }
+
+  .check {
+    padding-left: 30px;
+    width: 200px;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -189,18 +191,14 @@ main {
     height: 60px;
   }
 
-  main {
-    flex-direction: row;
-  }
-
   .movie {
-    width: 22rem;
+    width: 28rem;
   }
 
   .btnHigh,
   .btnLow {
     border-style: solid;
-    font-size: 100px;
+    font-size: 30px;
     font-weight: 600;
     color: yellow;
     background-color: transparent;
@@ -214,32 +212,19 @@ main {
 
   .circle,
   .cross {
-    border: 30px solid rgb(51, 198, 51);
-    width: 430px;
+    width: 440px;
     height: 400px;
-    border-radius: 48%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -40%);
-    padding-bottom: 50px;
-    z-index: 1;
-    animation: appear 4s ease;
-    opacity: 0.5;
-  }
-
-  .cross {
-    border-color: red;
-    padding-left: 80px;
-    padding-top: 50px;
   }
 
   .crossMark {
+    padding-top: 10px;
     width: 350px;
+    margin: 0 auto;
   }
 
   .check {
+    padding-top: 20px;
     padding-left: 60px;
-    width: 400;
+    width: 300px;
   }
 }
